# sglLogger

./: .gitignore  CMakeLists.txt  COPYING.txt  README.md
CMake/: ProjectSettings.cmake  ProjectWarnings.cmake
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/Core/: main.cpp
src/Core/: Base.hpp  CMakeLists.txt
src/Core/Core/: CMakeLists.txt  LogMsg.hpp  LogType.hpp
src/Core/Core/Core/: PreProcessData.hpp
src/Core/Core/PatternFormatter/: PatternFormatter.hpp
src/Core/Core/sglLogger/: Logger.cpp  RouteMethod.hpp
src/Core/Core/sglLogger/RouteMethod/: RouteStdOut.hpp
src/Core/Core/utils/: FileUtility.hpp  Time.hpp
src/Core/Logger/: Logger.hpp
src/Core/sglLogger/: Base.hpp  CMakeLists.txt  Logger.hpp
src/Core/sglLogger/Core/: Base.hpp  LogMsg.hpp  Types.hpp
src/Core/sglLogger/sglLogger/: Logger.cpp  Logger.hpp
